// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle Image renders correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1w52cfi-0 fMEevm"
>
  <img
    alt="Image"
    className="Image__ImageElement-sc-llmt0i-0 bwfBBz"
    height="auto"
    src="https://picsum.photos/200/200"
  />
</div>
`;

exports[`Image renders correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1w52cfi-0 fMEevm"
>
  <img
    alt="image"
    className="Image__ImageElement-sc-llmt0i-0 kvxfXz"
    height="auto"
    src="https://picsum.photos/200/200"
  />
</div>
`;

exports[`Rounded Image renders correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1w52cfi-0 fMEevm"
>
  <img
    alt="Image"
    className="Image__ImageElement-sc-llmt0i-0 DonwS"
    height="auto"
    src="https://picsum.photos/200/200"
  />
</div>
`;

exports[`Square Image renders correctly 1`] = `
<div
  className="ThemeProvider__Base-sc-1w52cfi-0 fMEevm"
>
  <img
    alt="Image"
    className="Image__ImageElement-sc-llmt0i-0 vrcm"
    height="auto"
    src="https://picsum.photos/200/200"
    width={300}
  />
</div>
`;
